--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
+  color: darkslateblue;
+}
+li {
+  list-style: none;
+}
 header nav {
   width: 100%;
   background-color: #ccc;
@@ -27,4 +34,9 @@ header nav ul li a.activeLink {
 }
 footer {
   background-color: #ccc;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
 }
