--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,22 @@ footer {
   text-align: center;
   padding: 10px 0;
 }
+.profile {
+  display: flex;
+}
+aside {
+  width: 20%;
+}
+.aside {
+  background-color: mistyrose;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: center;
+  font-size: 25px;
+}
+.aside li {
+  padding: 50px 0;
+}
